Implement losing and winning in style

--- a/docs/style.css
+++ b/docs/style.css
@@ -40,11 +40,11 @@
 }
 
 .won {
-    background-color: #26f813;
+    background-color: #057F74;
 }
 
 .failed {
-    background-color: #f30620;
+    background-color: #980004;
 }
 
 body {
