--- a/style.css
+++ b/style.css
@@ -24,8 +24,23 @@
 }
 
 .clickable {
-    border: 0.1em solid #2eebff;
+	  box-shadow:inset 0px 2px 0px 0px #ffffff;
+	  background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+	  background-color:#f9f9f9;
+	  border-radius:10px;
+	  border:2px solid #dcdcdc;
+	  cursor:pointer;
+	  color:#666666;
+	  font-weight:bold;
+	  text-decoration:none;
 }
+.clickable:active {
+	  position:relative;
+	  top:2px;
+	  box-shadow:inset 0px 0px 0px 0px #ffffff;
+}
+
+
 
 .active {
     background-color: #beebf6;
