--- a/docs/style.css
+++ b/docs/style.css
@@ -23,6 +23,11 @@
     font-size: 40px;
 }
 
+.svg_container {
+    width: 2em;
+    height: 2em;
+}
+
 .clickable {
 	  box-shadow:inset 0px 2px 0px 0px #ffffff;
 	  background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
