--- a/style.css
+++ b/style.css
@@ -23,9 +23,61 @@
     font-size: 40px;
 }
 
-.svg_container {
-    width: 2em;
-    height: 2em;
+.not-clickable {
+	  box-shadow:inset 0px 2px 0px 0px #ffffff;
+	  border-radius:10px;
+	  cursor:pointer;
+	  color:#666666;
+	  font-weight:bold;
+	  text-decoration:none;
+	  background:linear-gradient(to bottom, #f9f9f9 5%, #f9f9f9 100%);
+}
+
+.mines-1 {
+    color: #5296a5;
+}
+
+.mines-2 {
+    color: #50723c;
+}
+
+.mines-3 {
+    color: #d81159;
+}
+
+.mines-4 {
+    color: #ffbc42;
+}
+
+.mines-5 {
+    color: #218380;
+}
+
+.mines-6 {
+    color: #685369;
+}
+
+.mines-7 {
+    color: #8f2d56;
+}
+
+.mines-8 {
+    color: #423e28
+}
+
+.clickable2 {
+	  box-shadow:inset 0px 2px 0px 0px #ffffff;
+	  background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+	  border-radius:10px;
+	  cursor:pointer;
+	  color:#666666;
+	  font-weight:bold;
+	  text-decoration:none;
+}
+.clickable2:active {
+	  position:relative;
+	  top:2px;
+	  box-shadow:inset 0px 0px 0px 0px #ffffff;
 }
 
 .clickable {
@@ -55,10 +107,6 @@
     background-color: #beebf6;
 }
 
-.frozen {
-    background-color: #aaaaaa;
-}
-
 .ongoing {
     background-color: #ffffff;
 }
@@ -68,7 +116,7 @@
 }
 
 .failed {
-    background-color: #980004;
+    background-color: #f4796b;
 }
 
 body {
