--- a/docs/style.css
+++ b/docs/style.css
@@ -1,12 +1,12 @@
 .flex-container {
-    display:flex;
+    display: flex;
     flex-flow: row wrap;
-    margin: 5%;
+    padding: 3%;
     justify-content: center;
 }
 
 .break {
-    width:100%;
+    width: 100%;
     flex-basis: 100%;
 }
 
@@ -56,63 +56,65 @@
 }
 
 .clickable2 {
-    box-shadow:inset 0px 2px 0px 0px #ffffff;
-    background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
-    border-radius:10px;
-    cursor:pointer;
-    color:#666666;
-    font-weight:bold;
-    text-decoration:none;
+    box-shadow: inset 0px 2px 0px 0px #ffffff;
+    background: linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+    border-radius: 10px;
+    cursor: pointer;
+    color: #666666;
+    font-weight: bold;
+    text-decoration: none;
 }
+
 .clickable2:active {
-    position:relative;
-    top:2px;
-    box-shadow:inset 0px 0px 0px 0px #ffffff;
+    position: relative;
+    top: 2px;
+    box-shadow: inset 0px 0px 0px 0px #ffffff;
 }
 
 .not-clickable2 {
-    box-shadow:inset 0px 2px 0px 0px #ffffff;
-    border-radius:10px;
-    cursor:pointer;
-    color:#666666;
-    font-weight:bold;
-    text-decoration:none;
-    background:linear-gradient(to bottom, #f9f9f9 5%, #f9f9f9 100%);
+    box-shadow: inset 0px 2px 0px 0px #ffffff;
+    border-radius: 10px;
+    cursor: pointer;
+    color: #666666;
+    font-weight: bold;
+    text-decoration: none;
+    background: linear-gradient(to bottom, #f9f9f9 5%, #f9f9f9 100%);
 }
 
 .clickable {
-    box-shadow:inset 0px 2px 0px 0px #ffffff;
-    background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
-    background-color:#f9f9f9;
-    border-radius:10px;
-    border:2px solid #dcdcdc;
-    cursor:pointer;
-    color:#666666;
-    font-weight:bold;
-    text-decoration:none;
-    height:2em;
-    width:2em;
+    box-shadow: inset 0px 2px 0px 0px #ffffff;
+    background: linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    border: 2px solid #dcdcdc;
+    cursor: pointer;
+    color: #666666;
+    font-weight: bold;
+    text-decoration: none;
+    height: 2em;
+    width: 2em;
     margin-left: 1em;
     margin-right: 1em;
 }
 
 .not-clickable {
-    box-shadow:inset 0px 2px 0px 0px #ffffff;
-    border-radius:10px;
-    cursor:pointer;
-    color:#666666;
-    font-weight:bold;
-    text-decoration:none;
-    background:linear-gradient(to bottom, #f9f9f9 5%, #f9f9f9 100%);
-    height:2em;
-    width:2em;
+    box-shadow: inset 0px 2px 0px 0px #ffffff;
+    border-radius: 10px;
+    cursor: pointer;
+    color: #666666;
+    font-weight: bold;
+    text-decoration: none;
+    background: linear-gradient(to bottom, #f9f9f9 5%, #f9f9f9 100%);
+    height: 2em;
+    width: 2em;
     margin-left: 1em;
     margin-right: 1em;
 }
+
 .clickable:active {
-    position:relative;
-    top:2px;
-    box-shadow:inset 0px 0px 0px 0px #ffffff;
+    position: relative;
+    top: 2px;
+    box-shadow: inset 0px 0px 0px 0px #ffffff;
     background-color: #beebf6;
 }
 
